# jx

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/: jextract.py
test/: different.jsonl  test01.txt  test04.txt  test05.txt  test07.txt  test08.txt  test09.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test_jx.py  test_module.py  users.jsonl  users_array.json  users_complex.jsonl  users_more_complex.jsonl
tests/: test02.txt  test03.txt  test06.txt  test10.txt  test_module.py  users_results.json
