[metadata]
name = jextract
version = 0.9.1
description = A simple tool for easily extracting fields from json data
author = Jud Dagnall
author_email = github@dagnall.net
url = https://github.com/thejud/jx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating9System :: OS Independent
    Development Status :: 4 - Beta

[options]
modules = jextract
include_package_data = True
zip_safe = True
scripts =
    src/jextract_jdagnall/jextract.py
install_requires =
    pytest
tests_require =
    pytest-cov

[options.entry_points]
console_scripts = 
  jx = jextract_jdagnall.jextract:cli

[options.extras_require]
test =
    pytest
dev =
    pytest-cov

[tool:pytest]
addopts = --cov=jx --cov-report=term-missing
testpaths = tests
